# CloudLoom

./: .gitignore  README.md  go.mod  go.sum  main.go
api/cloudformation/: handlers.go  models.go
backend/: .env.example  go.mod  go.sum  main.go
backend/api/assume-role/: handlers.go  routes.go  service.go
backend/api/cloudformation/: handlers.go  models.go  routes.go
backend/api/configure/: handlers.go  routes.go
backend/api/infrastructure/: handlers.go  routes.go
backend/common/: globals.go
backend/config/: aws-config.go  mongo-config.go
backend/controller/: github_controller.go
backend/models/: models.go
backend/route/: routes.go
backend/services/: cloudtrail-service.go  cloudtrail.go  cloudwatch.go  config-service.go  eventbridge.go  s3.go  sqs.go  sts.go
backend/services/github/: auth.go
backend/services/steampipe/: configure.go
frontend/src/: App.tsx
frontend/src/pages/: ChoosePlan.tsx  CloudLoomWelcome.tsx  SetupCloudLoom.tsx
multi_role_agent/: .env.example  README_SETUP.md  TESTING_GUIDE.md  agent.py  b.py  changed_graph.txt  changed_terraform.tf  doc.md  logs.json  original.tf  original_graph.txt  pyproject.toml  report.txt  setup_env.sh  start.sh  test_api.py  test_imports.py
multi_role_agent/index/0806ed6e-140c-4993-866d-8cec49defedd/: index_metadata.pickle
route/: routes.go
